--- a/src/main/resources/tezfx/view/AddTaskModal.fxml
+++ b/src/main/resources/tezfx/view/AddTaskModal.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.geometry.Insets?>
-<VBox spacing="20.0" styleClass="modal-card" stylesheets="@../../css/stylesheet.css, @../../css/project-css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tezfx.controller.AddTaskController">
+<VBox spacing="20.0" styleClass="modal-card" style="-fx-background-radius: 20;" stylesheets="@../../css/stylesheet.css, @../../css/project-css.css, @../../css/buttons.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tezfx.controller.AddTaskController">
     <children>
         <HBox alignment="CENTER_LEFT">
             <children>
                 <VBox HBox.hgrow="ALWAYS">
                     <children>
                         <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Create New Task" textFill="#1a1a1a" />
-                        <Label text="Assign a new objective to this project" textFill="#737373" />
+                        <Label fx:id="subtitleLabel" text="Assign a new objective to this project" textFill="#737373" />
                     </children>
                 </VBox>
                 <Button fx:id="closeButton" mnemonicParsing="false" onAction="#onCancel" style="-fx-background-color: transparent;" text="✕" textFill="#b3b3b3" />
@@ -33,6 +33,12 @@
             <Label fx:id="descErrorLabel" managed="false" textFill="#dc2626" visible="false" />
         </VBox>
 
+        <VBox spacing="5.0">
+            <Label style="-fx-font-weight: bold;" text="Project *" textFill="#4d4d4d" />
+            <ComboBox fx:id="projectCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-combo" />
+            <Label fx:id="projectErrorLabel" managed="false" textFill="#dc2626" visible="false" />
+        </VBox>
+
         <HBox spacing="20.0">
             <children>
                 <VBox HBox.hgrow="ALWAYS" spacing="5.0">
@@ -40,19 +46,19 @@
                     <DatePicker fx:id="dueDatePicker" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-datepicker" />
                     <Label fx:id="dueDateErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
-                <VBox HBox.hgrow="ALWAYS" spacing="5.0">
+                <VBox HBox.hgrow="ALWAYS" minWidth="150.0" spacing="5.0">
                     <Label style="-fx-font-weight: bold;" text="Status" textFill="#4d4d4d" />
-                    <ComboBox fx:id="statusCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-combo" />
+                    <ComboBox fx:id="statusCombo" maxWidth="1.7976931348623157E308" minWidth="150.0" prefHeight="45.0" prefWidth="150.0" styleClass="modern-combo" />
                     <Label fx:id="statusErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
-                <VBox HBox.hgrow="ALWAYS" spacing="5.0">
+                <VBox HBox.hgrow="ALWAYS" minWidth="170.0" spacing="5.0">
                     <Label style="-fx-font-weight: bold;" text="Assign User" textFill="#4d4d4d" />
-                    <ComboBox fx:id="userCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" promptText="Assign to..." styleClass="modern-combo" />
+                    <ComboBox fx:id="userCombo" maxWidth="1.7976931348623157E308" minWidth="170.0" prefHeight="45.0" prefWidth="170.0" promptText="Assign to..." styleClass="modern-combo" />
                     <Label fx:id="userErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
-                <VBox HBox.hgrow="ALWAYS" spacing="5.0">
+                <VBox HBox.hgrow="ALWAYS" minWidth="130.0" spacing="5.0">
                     <Label style="-fx-font-weight: bold;" text="Priority" textFill="#4d4d4d" />
-                    <ComboBox fx:id="priorityCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-combo" />
+                    <ComboBox fx:id="priorityCombo" maxWidth="1.7976931348623157E308" minWidth="130.0" prefHeight="45.0" prefWidth="130.0" styleClass="modern-combo" />
                     <Label fx:id="priorityErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
             </children>
