--- a/src/main/resources/tezfx/view/UpdateTaskModal.fxml
+++ b/src/main/resources/tezfx/view/UpdateTaskModal.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="20.0" styleClass="modal-card" stylesheets="@../../css/stylesheet.css, @../../css/project-css.css, @../../css/buttons.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tezfx.controller.UpdateTaskModalController">
+<VBox spacing="20.0" styleClass="modal-card" stylesheets="@../../css/stylesheet.css, @../../css/project-css.css, @../../css/buttons.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tezfx.controller.UpdateTaskModalController">
     <children>
         <HBox alignment="CENTER_LEFT">
             <children>
@@ -43,19 +43,19 @@
                     <DatePicker fx:id="dueDatePicker" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-datepicker" />
                     <Label fx:id="dueDateErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
-                <VBox HBox.hgrow="ALWAYS" spacing="5.0">
+                <VBox HBox.hgrow="ALWAYS" minWidth="150.0" spacing="5.0">
                     <Label style="-fx-font-weight: bold;" text="Status" textFill="#4d4d4d" />
-                    <ComboBox fx:id="statusCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-combo" />
+                    <ComboBox fx:id="statusCombo" maxWidth="1.7976931348623157E308" minWidth="150.0" prefHeight="45.0" prefWidth="150.0" styleClass="modern-combo" />
                     <Label fx:id="statusErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
-                <VBox HBox.hgrow="ALWAYS" spacing="5.0">
+                <VBox HBox.hgrow="ALWAYS" minWidth="170.0" spacing="5.0">
                     <Label style="-fx-font-weight: bold;" text="Assigned To" textFill="#4d4d4d" />
-                    <ComboBox fx:id="userCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-combo" />
+                    <ComboBox fx:id="userCombo" maxWidth="1.7976931348623157E308" minWidth="170.0" prefHeight="45.0" prefWidth="170.0" styleClass="modern-combo" />
                     <Label fx:id="userErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
-                <VBox HBox.hgrow="ALWAYS" spacing="5.0">
+                <VBox HBox.hgrow="ALWAYS" minWidth="130.0" spacing="5.0">
                     <Label style="-fx-font-weight: bold;" text="Priority" textFill="#4d4d4d" />
-                    <ComboBox fx:id="priorityCombo" maxWidth="1.7976931348623157E308" prefHeight="45.0" styleClass="modern-combo" />
+                    <ComboBox fx:id="priorityCombo" maxWidth="1.7976931348623157E308" minWidth="130.0" prefHeight="45.0" prefWidth="130.0" styleClass="modern-combo" />
                     <Label fx:id="priorityErrorLabel" managed="false" textFill="#dc2626" visible="false" />
                 </VBox>
             </children>
