--- a/src/main/resources/SignIn/SignIn.fxml
+++ b/src/main/resources/SignIn/SignIn.fxml
@@ -52,6 +52,25 @@
                             </children>
                         </VBox>
 
+                        <!-- Nouvelle section Captcha -->
+                        <VBox spacing="8.0">
+                            <children>
+                                <Label styleClass="input-label" text="Captcha" />
+                                <HBox spacing="10.0" alignment="CENTER_LEFT">
+                                    <children>
+                                        <ImageView fx:id="captchaImageView" fitHeight="50.0" fitWidth="150.0" preserveRatio="false" styleClass="captcha-image" />
+                                        <Button fx:id="refreshCaptchaBtn" styleClass="btn-refresh" onAction="#refreshCaptcha">
+                                            <graphic>
+                                                <FontIcon iconLiteral="mdi2r-refresh" iconSize="20" iconColor="#7C3AED" />
+                                            </graphic>
+                                        </Button>
+                                    </children>
+                                </HBox>
+                                <TextField fx:id="captchaField" promptText="Saisissez le code" styleClass="login-input" />
+                                <Label fx:id="captchaError" text="Code incorrect" textFill="red" visible="false" managed="false" style="-fx-font-size: 11px;" />
+                            </children>
+                        </VBox>
+
                         <Button onAction="#handleSignIn" maxWidth="Infinity" mnemonicParsing="false" styleClass="btn-primary-large" text="Sign In" />
 
                         <HBox alignment="CENTER" spacing="5.0">
